# HypiC

./: CMakeLists.txt  Example_Input.txt
LANDMARK/: Compare_To_LANDMARK.py
Reactions/: Xe_Ionization_0_to_1.txt  Xe_Loss.txt
cmake/: HypiC_add_test.cmake  add_test.cmake
include/: Electrons_Object.hpp  HypiC.hpp  HypiCpp.hpp  Initialize.hpp  Input.hpp  Interpolate.hpp  Iteration.hpp  Output.hpp  Particles.hpp  Particles_Object.hpp  Rate_Table.hpp  math.hpp
src/: CMakeLists.txt  Electrons_Object.cpp  HypiC.cpp  Initialize.cpp  Input.cpp  Interpolate.cpp  Iteration.cpp  Output.cpp  Particles.cpp  Particles_Object.cpp  Rate_Table.cpp  math.cpp
test/: CMakeLists.txt  Initialization_Tests.cpp  Math_Tests.cpp  Output_Tests.cpp  Particle_Tests.cpp  Rate_Table_Tests.cpp  unit_test_framework.hpp
